<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rapportVisite"
            android:textColor="#4c4e52"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="411dp"
        android:layout_height="398dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <EditText
            android:id="@+id/editTextTuteurPedag"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieTuteurPedag"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextMailPedag"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieMail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDateVisite"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieDateVisite"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEntreprise"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieEntreprise"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDivers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieDivers"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTuteurEntrep"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieTuteurEntrep"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTelEntrep"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieTelephone"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextMailEntrep"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/saisieMail"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="412dp"
        android:layout_height="113dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <Button
            android:id="@+id/btnSuivant"
            style="@style/stylebouton"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:focusedByDefault="false"
            android:text="@string/btnSuivant" />

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/stylebouton"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/btnAnnuler" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>