<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rapportVisite"
            android:textColor="#4c4e52"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRessourcesOutils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ressources et outils utilisés" />

        <EditText
            android:id="@+id/editRessourcesOutilsUtilise"
            android:layout_width="401dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="bottom"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:id="@+id/textViewCommentairesAppreciations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Commentaires et appréciations générale" />

        <EditText
            android:id="@+id/editCommentairesAppreciations"
            android:layout_width="428dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="bottom"
            android:inputType="textPersonName"></EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSuivant"
            style="@style/stylebouton"
            android:layout_width="236dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:focusedByDefault="false"
            android:text="@string/btnSuivant" />

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/stylebouton"
            android:layout_width="236dp"
            android:layout_height="3dp"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/btnAnnuler" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>