<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="413dp"
        android:layout_height="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/rapportVisite"
            android:textColor="#4c4e52"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <TextView
            android:id="@+id/textViewConditionsStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="Conditions du stage"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editConditionsStage"
            android:layout_width="300dp"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:id="@+id/textViewBilanTravaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="Bilan des travaux réalisés"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editBilanTravaux"
            android:layout_width="300dp"
            android:layout_height="79dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"></EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="412dp"
        android:layout_height="113dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnSuivant"
            style="@style/stylebouton"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:focusedByDefault="false"
            android:text="@string/btnSuivant" />

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/stylebouton"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/btnAnnuler" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>