<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rapportVisite"
            android:textColor="#4c4e52"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textViewParticipationMaitreStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Participation du maître de stage à l'épreuve oral 'Parcours de professionnalisation'" />


        <RadioGroup
            android:id="@+id/radioParticipMaitreStage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonOuiParticipationMaitreStage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Oui" />

            <RadioButton
                android:id="@+id/radioButtonNonParticipationMaitreStage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Non" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewOpportuniteStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Opportunité de stage" />

        <RadioGroup
            android:id="@+id/radioOpportunite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonOuiOpportuniteStage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Oui" />

            <RadioButton
                android:id="@+id/radioButtonNonOpportuniteStage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Non" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewSiOui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="si oui :" />

        <RadioGroup
            android:id="@+id/radioSiOpportunite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonMaiJuin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="mai-juin 2020" />

            <RadioButton
                android:id="@+id/radioButtonJanvierFevrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="janvier-février 2021" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnEnregistrer"
            style="@style/stylebouton"
            android:layout_width="236dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:focusedByDefault="false"
            android:text="@string/btnEnregistrer" />

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/stylebouton"
            android:layout_width="236dp"
            android:layout_height="3dp"
            android:layout_margin="5dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/btnAnnuler" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>